added GET locker
